--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,8 +16,11 @@
 //   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
   "features": {
     "ghcr.io/devcontainers/features/go": {
-      "version": "latest",
-      "golangciLintVersion": "latest"
+        "version": "latest",
+        "golangciLintVersion": "latest"
+    },
+    "ghcr.io/devcontainers/features/python:1": {
+        "version": "latest"
     }
   }
 
