Codesandbox docker file.

--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -4,6 +4,11 @@
 
   // These tasks can be run from CodeSandbox. Running one will open a log in the app.
   "tasks": {
+    "whereis htop": {
+      "name": "whereis htop",
+      "command": "whereis htop",
+      "runAtStart": true
+    },
     "docker-compose up --build": {
       "name": "docker-compose up --build",
       "command": "docker-compose up --build",
