--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,9 +19,7 @@
         "version": "latest",
         "golangciLintVersion": "latest"
     },
-    "ghcr.io/devcontainers/features/python:1": {
-        "version": "latest"
-    }
+    "ghcr.io/devcontainers/features/python:1": {}
   }
 
   // Features to add to the dev container. More info: https://containers.dev/features.
