--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,15 @@
         "version": "latest",
         "golangciLintVersion": "latest"
     },
-    "ghcr.io/devcontainers/features/python:1": {}
+    "ghcr.io/devcontainers/features/python": {
+        "version": "3.9",
+        "installTools": "true",
+        "optimize": "false",
+        "installPath": "/usr/local/python",
+        "installJupyterlab": "false",
+        "configureJupyterlabAllowOrigin": "",
+        "httpProxy": ""
+    }
   }
 
   // Features to add to the dev container. More info: https://containers.dev/features.
